# job_manager

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml  rustfmt.toml  slurm-7543028.out  test.sh
.claude/PRPs/reviews/: pr-6-review.md
.github/workflows/: CI.yml  stub-check.yml
docs/: API.md  README.md  architecture.md  development.md  toml-reference.md
docs/references/: orchestration-systems.md
docs/superpowers/plans/: 2026-05-12-job-manager-sp1.md  2026-05-12-job-manager-sp2.md  2026-05-13-job-manager-sp3-rearch.md  2026-05-13-job-manager-sp3.md  2026-05-15-common-env-defaulting.md  2026-05-16-jm-ls-commands.md  2026-05-16-jm-new-boilerplate.md  2026-05-16-toml-reference-and-doctor.md  2026-05-17-jm-new-recipes-planA-d2-launcher-scratch.md  2026-05-17-jm-new-recipes-planB-recipes-core.md  2026-05-17-jm-new-recipes-planC-cli-render.md  2026-05-18-jm-g16-opt-parse-recipe.md
docs/superpowers/specs/: 2026-05-12-job-manager-sp1-design.md  2026-05-12-job-manager-sp2-design.md  2026-05-13-job-manager-sp3-design.md  2026-05-13-job-manager-sp3-rearch-design.md  2026-05-15-common-env-defaulting-design.md  2026-05-16-jm-ls-commands-design.md  2026-05-16-jm-new-boilerplate-design.md  2026-05-16-jm-new-domain-recipes-design.md  2026-05-16-toml-reference-and-doctor-design.md  2026-05-18-jm-g16-opt-parse-recipe-design.md  2026-05-20-gaussian-compute-runtime-audit.md  2026-05-20-jm-recipe-v2-design.md
docs/superpowers/thought/: 2026-05-15-common-env-injection-orchestrator-lessons.md  2026-05-15-flow-toml-partition-defaulting.md
examples/full/: README.md  common.toml
examples/full/01999999-0000-7000-8000-000000000000/: flow.toml  plan.toml
examples/full/01999999-0000-7000-8000-000000000000/.jm/: flow.effective.toml
examples/full/01999999-0000-7000-8000-000000000000/.jm/opt/: status.toml
examples/simple/: README.md
examples/simple/inputs/: common.toml
examples/simple/inputs/01999999-0000-7000-8000-000000000000/: flow.toml  plan.toml
examples/simple/inputs/01999999-0000-7000-8000-000000000000/freq/: .status.toml
examples/simple/outputs/01999999-0000-7000-8000-000000000000/.jm/: flow.effective.toml
examples/simple/outputs/01999999-0000-7000-8000-000000000000/.jm/freq/: batch.bash
examples/simple/outputs/01999999-0000-7000-8000-000000000000/.jm/opt/: batch.bash
examples/simple/outputs/01999999-0000-7000-8000-000000000000/opt/: .status.toml  slurm-7543027.out
examples/sweep/: PLAN.md  README.md  author.py  regenerate_outputs.sh
examples/sweep/inputs-fail/: common.toml
examples/sweep/inputs-fail/0199999a-0000-7000-8000-000000000001/: flow.toml  plan.toml
examples/sweep/inputs-fail/0199999a-0000-7000-8000-000000000001/.jm/freq__compound=2/: batch.bash
examples/sweep/inputs/0199999a-0000-7000-8000-000000000000/: .gitignore  flow.toml  plan.toml
examples/sweep/outputs-fail/0199999a-0000-7000-8000-000000000001/.jm/: flow.effective.toml
examples/sweep/outputs-fail/0199999a-0000-7000-8000-000000000001/.jm/freq__compound=0/: batch.bash
examples/sweep/outputs-fail/0199999a-0000-7000-8000-000000000001/.jm/freq__compound=1/: batch.bash
examples/sweep/outputs-fail/0199999a-0000-7000-8000-000000000001/.jm/opt__compound=0/: batch.bash
examples/sweep/outputs-fail/0199999a-0000-7000-8000-000000000001/.jm/opt__compound=2/: batch.bash
examples/sweep/outputs-fail/0199999a-0000-7000-8000-000000000001/.jm/prep/: batch.bash
examples/sweep/outputs-fail/0199999a-0000-7000-8000-000000000001/opt__compound=1/: batch.bash
examples/sweep/outputs/0199999a-0000-7000-8000-000000000000/.jm/: flow.effective.toml
examples/sweep/outputs/0199999a-0000-7000-8000-000000000000/.jm/freq__compound=0/: batch.bash
examples/sweep/outputs/0199999a-0000-7000-8000-000000000000/.jm/freq__compound=1/: batch.bash
examples/sweep/outputs/0199999a-0000-7000-8000-000000000000/.jm/opt__compound=0/: batch.bash
examples/sweep/outputs/0199999a-0000-7000-8000-000000000000/.jm/opt__compound=2/: batch.bash
examples/sweep/outputs/0199999a-0000-7000-8000-000000000000/.jm/prep/: batch.bash
examples/sweep/outputs/0199999a-0000-7000-8000-000000000000/freq__compound=2/: batch.bash
examples/sweep/outputs/0199999a-0000-7000-8000-000000000000/opt__compound=1/: batch.bash
python/job_manager/: __init__.py
python/job_manager/_job_manager_core/: __init__.pyi
python/tests/: test_all.py  test_jobid.py  test_plan.py  test_python_api.py  test_read_flow_effective.py  test_recipe_parse_py.py  test_recipe_run_py.py  test_render.py  test_search_filter_status.py
src/: concurrency.rs  error.rs  filter.rs  flow_io.rs  jobid.rs  lib.rs  listing.rs  path.rs  search.rs  slurm_facade.rs  tick.rs  view.rs  walk.rs
src/doctor/: checks.rs  mod.rs  report.rs
src/flow/: mod.rs  run.rs  topology.rs
src/job/: lifecycle.rs  mod.rs  run.rs
src/listing/: collect.rs  format.rs  mod.rs
src/persistence/: common.rs  flow.rs  job_run.rs  mod.rs  path.rs  plan.rs
src/plan/: io.rs  mod.rs
src/py_export/: error.rs  filter.rs  flow.rs  job.rs  jobid.rs  mod.rs  path.rs  persistence.rs  plan.rs  render.rs  runner.rs  search.rs  status.rs  tick.rs  transition.rs  view.rs  walk.rs
src/recipes/: flow.rs  job.rs  mod.rs  xyz.rs
src/recipes/assets/: _base.bash.expected  _base.bash.j2
src/recipes/assets/g16_opt/: main.gjf.tmpl  run.py.tmpl
src/recipes/assets/parse_g16_out/: parse.py.tmpl
src/recipes/flows/: blank.rs  g16_opt_parse.rs  mod.rs
src/recipes/jobs/: g16_opt.rs  mod.rs  parse_g16_out.rs
src/render/: mod.rs
src/runner/: flow.rs  mod.rs  transition.rs
src/slurm/: dependency.rs  executor.rs  logpath.rs  mod.rs  querier.rs
src/status/: io.rs  mod.rs
tests/: cli_smoke.rs  doctor_examples.rs  integration_effective_isolation.rs  integration_listing.rs  integration_new.rs  integration_new_recipes.rs  integration_plan.rs  integration_sp3.rs  integration_tick.rs  integration_walk.rs  jm_doctor_cli.rs
