[package]
name = "job_manager"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
name = "job_manager"

[[bin]]
name = "stub_gen"
required-features = ["stub_gen"]

[[bin]]
name = "jm"
path = "src/bin/jm.rs"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"

log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

tokio = { version = "1.52", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "fs",
  "io-util",
] }
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.23", features = ["serde", "v7"] }

clap = { version = "4.6", features = ["derive"] }

# upstream crates — Rust-only consumption (no extension-module).
#
# Pyclass Single Owner rule: D2/A1 own their pyclass impls. We disable
# their `pyo3` feature so this crate's cdylib does not duplicate pyclass
# registrations.

# Do NOT pin `rev` here. D2 (gaussian_job_shared) references
# slurm-async-runner by the same URL without a `rev`; pinning a `rev` on
# the direct reference makes cargo treat the two as distinct source
# entries, duplicating `SlurmJobConfig` / `JobStatus` and silently
# breaking the Pyclass Single Owner rule. Cargo.lock (committed) is the
# canonical pin: to bump, run `cargo update -p <crate>` and commit
# Cargo.lock in the same change. See CLAUDE.md "Upstream crates".
gaussian_job_shared = { git = "https://github.com/kkiyama117/gaussian_job_shared.git", default-features = false }
slurm_async_runner = { git = "https://github.com/kkiyama117/slurm-async-runner.git", default-features = false }

# OPTIONAL pyo3 stack — unchanged from skeleton
pyo3 = { version = "0.28", features = [
  "abi3-py312",
  # Connection to other useful crates
  "anyhow",
  "chrono",
  "experimental-inspect",
  # NOTE: "extension-module" is intentionally NOT enabled here. Enable it
  # per-package via `[tool.maturin] features = ["pyo3/extension-module"]`
  # in this package's pyproject.toml. Keeping it out of the default
  # workspace feature set lets the `stub_gen` binary link against libpython.
  # NOTE: "auto-initialize" is intentionally NOT enabled. It conflicts
  # with the statically-linked Python that maturin's manylinux build
  # images ship, producing the build-script error "auto-initialize
  # feature is enabled, but your Python installation only supports
  # embedding the Python interpreter statically". stub_gen does not need
  # it (abi3 dynamic linking via libpython3.so is sufficient at run time).
  "nightly",
  "serde",
], optional = true }
pyo3-async-runtimes = { version = "0.28", features = [
  "attributes",
  "tokio-runtime",
], optional = true }
pyo3-log = { version = "0.13", optional = true }
pythonize = { version = "0.28", optional = true }

# Pinned to kkiyama117/pyo3-stub-gen which carries the
# `#[gen_stub(awaitable)]` patch (upstream issue #326). Bump back to the
# upstream Jij-Inc rev once the PR is merged and released.
pyo3-stub-gen = { git = "https://github.com/kkiyama117/pyo3-stub-gen", rev = "a56406cb01ed9b0d0322bec59489e7017acb371b", default-features = false, features = [
  "infer_signature",
], optional = true }

[dev-dependencies]
tempfile = "3.27"
rstest = "0.26.1"
tokio = { version = "1.52", features = ["test-util"] }
assert_cmd = "2.2"
predicates = "3.1"

[features]
default = ["pyo3", "stub_gen"]

# Canonical-wheel build: enables BOTH the pyclass impls and the
# pymodule entry. This is the only path under which job_manager's
# pyclass code is compiled.
#
# ARCHITECTURE RULE — Pyclass Single Owner:
# Downstream crates MUST NOT enable this feature. Use
# `default-features = false` to consume Rust types only. Each
# pyclass type has exactly one owner cdylib in the dependency
# graph; duplicating pyclass impls into multiple cdylibs produces
# distinct Python type objects with identical __module__ strings,
# breaking isinstance checks.
pyo3 = [
  "dep:pyo3",
  "pyo3-async-runtimes",
  "pyo3-log",
  "pythonize",
  "pyo3-stub-gen",
]

stub_gen = ["pyo3"]
